update index html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-container">
+      <div class="header-container container">
         <nav class="header-nav">
           <a href="" class="header-logo link"
             >Web<span class="span-logo">Studio</span></a
@@ -55,7 +56,7 @@
     <main>
       <section class="serch">
         <div class="container">
-          <h1 hidden class="serch-title">Serch</h1>
+             <h1 hidden class="serch-title">Serch</h1>
           <ul class="serch-list list">
             <li class="serch-item">
               <button type="button" class="serch-btn btn-all">All</button>
@@ -75,38 +76,44 @@
               </button>
             </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="catalog-list list">
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img src="./images/bankingapp.jpg" alt="bankingapp" />
-                <h2 class="catalog-title">Banking App Interface Concept</h2>
+                <div class="container-catalog">
+                      <h2 class="catalog-title">Banking App Interface Concept</h2>
                 <p class="catalog-text">App</p></a
               >
+                </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img src="./images/cashlespayment.jpg" alt="cashlespayment" />
-                <h2 class="catalog-title">Cashless Payment</h2>
+             <div class="container-catalog">
+                 <h2 class="catalog-title">Cashless Payment</h2>
                 <p class="catalog-text">Marketing</p></a
               >
+             </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img src="./images/meditaionapp.jpg" alt="meditaionapp" />
-                <h2 class="catalog-title">Meditation App</h2>
+               <div class="container-catalog">
+                 <h2 class="catalog-title">Meditation App</h2>
                 <p class="catalog-text">App</p></a
               >
+               </div>
             </li>
           </ul>
           <ul class="catalog-list list">
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img src="./images/taxiservice.jpg" alt="taxiservice" />
-                <h2 class="catalog-title">Taxi Service</h2>
+                <div class="container-catalog">
+                     <h2 class="catalog-title">Taxi Service</h2>
                 <p class="catalog-text">Marketing</p></a
               >
+                </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link"
@@ -114,16 +121,20 @@
                   src="./images/screenillustrations.jpg"
                   alt="screenillustrations"
                 />
-                <h2 class="catalog-title">Screen Illustrations</h2>
+               <div>
+                 <h2 class="catalog-title">Screen Illustrations</h2>
                 <p class="catalog-text">Design</p></a
               >
+               </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link">
                 <img src="./images/onlinecourses.jpg" alt="onlinecourses" />
-                <h2 class="catalog-title">Online Courses</h2>
+               <div class="container-catalog">
+                 <h2 class="catalog-title">Online Courses</h2>
                 <p class="catalog-text">Marketing</p></a
               >
+               </div>
             </li>
           </ul>
           <ul class="catalog-list list">
@@ -133,23 +144,29 @@
                   src="./images/instagramstoriesconcept.jpg"
                   alt="instagramstoriesconcept"
                 />
-                <h2 class="catalog-title">Instagram Stories Concept</h2>
+                <div class="container-catalog">
+                  <h2 class="catalog-title">Instagram Stories Concept</h2>
                 <p class="catalog-text">Design</p></a
               >
+                </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img src="./images/organicfood.jpg" alt="organicfood" />
-                <h2 class="catalog-title">Organic Food</h2>
+               <div class="container-catalog">
+                 <h2 class="catalog-title">Organic Food</h2>
                 <p class="catalog-text">Web Site</p></a
               >
+               </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link">
                 <img src="./images/freshcoffee.jpg" alt="freshcoffee" />
-                <h2 class="catalog-title">Fresh Coffee</h2>
+              <div class="container-catalog">
+                  <h2 class="catalog-title">Fresh Coffee</h2>
                 <p class="catalog-text">Web Site</p></a
               >
+              </div>
             </li>
           </ul>
         </div>
