--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.css">
   </head>
   <body class="body">
     <header class="header">
@@ -104,14 +104,25 @@
                 src="./images/computer1.jpg"
                 alt="ComputerApple"
                 width="360"
+                class="info-img"
               />
             </li>
 
             <li class="info-item">
-              <img src="./images/watsapp.jpg" alt="WatsApp" width="360" />
+              <img
+                src="./images/watsapp.jpg"
+                alt="WatsApp"
+                width="360"
+                class="info-img"
+              />
             </li>
             <li class="info-item">
-              <img src="./images/iphone.jpg" alt="Iphone" width="360" />
+              <img
+                src="./images/iphone.jpg"
+                alt="Iphone"
+                width="360"
+                class="info-img"
+              />
             </li>
           </ul>
         </div>
@@ -125,14 +136,19 @@
                 src="./images/markguerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
+                class="info-img"
               />
-              <h3 class="team-title">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="container-team">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
-              <h3 class="team-title">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="container-team">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -140,8 +156,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="team-title">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="container-team">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -149,8 +167,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="team-title">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="container-team">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
