--- a/portfolio.html
+++ b/portfolio.html
@@ -56,85 +56,65 @@
     <main>
       <section class="serch">
         <div class="container">
-             <h1 hidden class="serch-title">Serch</h1>
-          <ul class="serch-list list">
-            <li class="serch-item">
-              <button type="button" class="serch-btn btn-all">All</button>
+          <ul class="catalog-list list">
+            <li class="catalog-item">
+              <a href="" class="catalog-link link"
+                ><img src="./images/bankingapp.jpg" alt="bankingapp" width="360"/>
+                <div class="container-catalog">
+                  <h2 class="catalog-title">Banking App Interface Concept</h2>
+                  <p class="catalog-text">App</p>
+                </div></a
+              >
             </li>
-            <li class="serch-item">
-              <button type="button" class="serch-btn btn-web">Web Site</button>
+            <li class="catalog-item">
+              <a href="" class="catalog-link link"
+                ><img src="./images/cashlespayment.jpg" alt="cashlespayment" width="360" />
+                <div  class="container-catalog">
+                  <h2 class="catalog-title">Cashless Payment</h2>
+                  <p class="catalog-text">Marketing</p>
+                </div></a
+              >
             </li>
-            <li class="serch-item">
-              <button type="button" class="serch-btn btn-app">App</button>
-            </li>
-            <li class="serch-item">
-              <button type="button" class="serch-btn btn-des">Design</button>
-            </li>
-            <li class="serch-item">
-              <button type="button" class="serch-btn btn-mark">
-                Marketing
-              </button>
+            <li class="catalog-item">
+              <a href="" class="catalog-link link"
+                ><img src="./images/meditaionapp.jpg" alt="meditaionapp" width="360"/>
+                <div  class="container-catalog">
+                  <h2 class="catalog-title">Meditation App</h2>
+                  <p class="catalog-text">App</p>
+                </div></a
+              >
             </li>
           </ul>
           <ul class="catalog-list list">
             <li class="catalog-item">
               <a href="" class="catalog-link link"
-                ><img src="./images/bankingapp.jpg" alt="bankingapp" />
-                <div class="container-catalog">
-                      <h2 class="catalog-title">Banking App Interface Concept</h2>
-                <p class="catalog-text">App</p></a
+                ><img src="./images/taxiservice.jpg" alt="taxiservice" width="360"/>
+                <div  class="container-catalog">
+                  <h2 class="catalog-title">Taxi Service</h2>
+                  <p class="catalog-text">Marketing</p>
+                </div></a
               >
-                </div>
-            </li>
-            <li class="catalog-item">
-              <a href="" class="catalog-link link"
-                ><img src="./images/cashlespayment.jpg" alt="cashlespayment" />
-             <div class="container-catalog">
-                 <h2 class="catalog-title">Cashless Payment</h2>
-                <p class="catalog-text">Marketing</p></a
-              >
-             </div>
-            </li>
-            <li class="catalog-item">
-              <a href="" class="catalog-link link"
-                ><img src="./images/meditaionapp.jpg" alt="meditaionapp" />
-               <div class="container-catalog">
-                 <h2 class="catalog-title">Meditation App</h2>
-                <p class="catalog-text">App</p></a
-              >
-               </div>
-            </li>
-          </ul>
-          <ul class="catalog-list list">
-            <li class="catalog-item">
-              <a href="" class="catalog-link link"
-                ><img src="./images/taxiservice.jpg" alt="taxiservice" />
-                <div class="container-catalog">
-                     <h2 class="catalog-title">Taxi Service</h2>
-                <p class="catalog-text">Marketing</p></a
-              >
-                </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img
                   src="./images/screenillustrations.jpg"
-                  alt="screenillustrations"
+                  alt="screenillustrations" width="360px"
                 />
-               <div>
-                 <h2 class="catalog-title">Screen Illustrations</h2>
-                <p class="catalog-text">Design</p></a
+                <div  class="container-catalog"> 
+                  <h2 class="catalog-title">Screen Illustrations</h2>
+                  <p class="catalog-text">Design</p>
+                </div></a
               >
-               </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link">
-                <img src="./images/onlinecourses.jpg" alt="onlinecourses" />
-               <div class="container-catalog">
-                 <h2 class="catalog-title">Online Courses</h2>
-                <p class="catalog-text">Marketing</p></a
+                <img src="./images/onlinecourses.jpg" alt="onlinecourses" width="360" />
+                <div  class="container-catalog">
+                  <h2 class="catalog-title">Online Courses</h2>
+                  <p class="catalog-text">Marketing</p>
+                </div></a
               >
-               </div>
             </li>
           </ul>
           <ul class="catalog-list list">
@@ -142,31 +122,31 @@
               <a href="" class="catalog-link link">
                 <img
                   src="./images/instagramstoriesconcept.jpg"
-                  alt="instagramstoriesconcept"
+                  alt="instagramstoriesconcept" width="360"
                 />
-                <div class="container-catalog">
+                <div  class="container-catalog">
                   <h2 class="catalog-title">Instagram Stories Concept</h2>
-                <p class="catalog-text">Design</p></a
+                  <p class="catalog-text">Design</p>
+                </div></a
               >
-                </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link"
-                ><img src="./images/organicfood.jpg" alt="organicfood" />
-               <div class="container-catalog">
-                 <h2 class="catalog-title">Organic Food</h2>
-                <p class="catalog-text">Web Site</p></a
+                ><img src="./images/organicfood.jpg" alt="organicfood" width="360" />
+                <div  class="container-catalog">
+                  <h2 class="catalog-title">Organic Food</h2>
+                  <p class="catalog-text">Web Site</p>
+                </div></a
               >
-               </div>
             </li>
             <li class="catalog-item">
               <a href="" class="catalog-link link">
-                <img src="./images/freshcoffee.jpg" alt="freshcoffee" />
-              <div class="container-catalog">
+                <img src="./images/freshcoffee.jpg" alt="freshcoffee" width="360"/>
+                <div  class="container-catalog">
                   <h2 class="catalog-title">Fresh Coffee</h2>
-                <p class="catalog-text">Web Site</p></a
+                  <p class="catalog-text">Web Site</p>
+                </div></a
               >
-              </div>
             </li>
           </ul>
         </div>
