update index html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,24 @@
     <main>
       <section class="serch">
         <div class="container">
+           <h1 hidden class="serch-title">Serch</h1>
+        <ul class="serch-list list">
+          <li class="serch-item">
+            <button type="button" class="serch-btn btn-all">All</button>
+          </li>
+          <li class="serch-item">
+            <button type="button" class="serch-btn btn-web">Web Site</button>
+          </li>
+          <li class="serch-item">
+            <button type="button" class="serch-btn btn-app">App</button>
+          </li>
+          <li class="serch-item">
+            <button type="button" class="serch-btn btn-des">Design</button>
+          </li>
+          <li class="serch-item">
+            <button type="button" class="serch-btn btn-mark">Marketing</button>
+          </li>
+        </ul>
           <ul class="catalog-list list">
             <li class="catalog-item">
               <a href="" class="catalog-link link"
@@ -84,8 +102,6 @@
                 </div></a
               >
             </li>
-          </ul>
-          <ul class="catalog-list list">
             <li class="catalog-item">
               <a href="" class="catalog-link link"
                 ><img src="./images/taxiservice.jpg" alt="taxiservice" width="360"/>
@@ -116,8 +132,6 @@
                 </div></a
               >
             </li>
-          </ul>
-          <ul class="catalog-list list">
             <li class="catalog-item">
               <a href="" class="catalog-link link">
                 <img
